fix dropdown font on firefox

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 :root {
-    --font: "Roboto";
+    --font: "Roboto", sans-serif;
 }
 body {
     width: 100%;
